syntax = "proto3";

option csharp_namespace = "MusicStuffBackend";

import "logpass.proto";
import "genericMessages.proto";

service User{
  rpc CreateNewUser (UserMessage) returns (Result);
  rpc GetUserById (Id) returns (UserMessage);
  rpc RemoveUser (LogPasUser) returns (Result);
  rpc ChangeLoginPassword (LogPasUser)returns (Result);
}
message LogPasUser{
  LoginPassword loginPassword = 1;
  int64 idUser = 2;
}
message UserMessage{
  string name= 1;
  string surname= 2;
  LoginPassword logPass = 3;
  string username = 4;
}
